--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "my-product-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for Import Export Hub",
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "seed": "node seeder.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^7.0.0",
     "mongoose": "^8.19.3"
   },
